// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TAG COMPONENT should render 1`] = `
<a
  href="tagLink"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="tag tag-common"
  >
    tagName
  </div>
</a>
`;

exports[`TAGSET COMPONENT should render 1`] = `
<div
  className="undefined tagSet"
>
  <a
    href="tagLink"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="tag tag-common"
    >
      tagName
    </div>
  </a>
</div>
`;
